<resources>
    <string name="app_name">Meditate2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="swipe_right_to_log_in">Swipe right to log in</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="swipe_left_to_register">Swipe left to Register</string>
    <string name="photo">Photo</string>
    <string name="pick">Pick</string>
    <string name="multiple_selections">Multiple Selections</string>
    <string name="single_selection">Single Selection</string>
    <string name="log_out">Log Out</string>
    <string name="save_image">Save Image</string>
</resources>
